<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="20sp"
    android:padding="10sp"
    android:gravity="center_vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >
       <Button
           android:layout_width="130sp"
           android:layout_height="60sp"
           android:layout_margin="20sp"
           android:text="@string/reselect_btn"
           android:onClick="reselect"
           android:id="@+id/reselectBtnId"
           />

        <Button
            android:layout_width="130sp"
            android:layout_height="60sp"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="2sp"
            android:layout_marginBottom="20sp"
            android:text="@string/cancel_btn"
            android:id="@+id/rcancelBtnId"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <Button

            android:background="@drawable/cicle_button"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_margin="20sp"
            android:id="@+id/fromtBtnId"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:background="@drawable/arrow_right_32"
            />

        <Button

            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_margin="20sp"
            android:background="@drawable/cicle_button"
            android:id="@+id/tolBtnId"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:layout_width="230sp"
            android:layout_height="85sp"
            android:layout_margin="20sp"
            android:text="@string/sure_btn"
            android:onClick="submit"
            android:id="@+id/SubmitBtnId"
            />
    </LinearLayout>
</LinearLayout>