<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="fill_parent"
       android:gravity="center"
       android:layout_height="50sp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/firstAreaTitle"/>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/changeAreaBtnId"
           android:layout_gravity="right"
           android:gravity="right"
           android:text="@string/back"
           android:onClick="changeArea"
           />
   </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10sp"
            android:gravity="center_vertical"
            android:layout_height="fill_parent">
            <ImageButton
                android:id="@+id/thirdAreaLft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:clickable="true"
                android:background="@drawable/arrow_left_24"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3AreaSub"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:layout_height="fill_parent">
            <com.henry.view.OneAreaButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b010101"
                android:tag="b010101"
                android:text="1"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b010102"
                android:tag="b010102"
                android:text="2"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b010103"
                android:tag="b010103"
                android:text="3"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b010104"
                android:tag="b010104"
                android:text="4"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b010105"
                android:tag="b010105"
                android:text="5"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b010106"
                android:tag="b010106"
                android:text="6"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b010107"
                android:tag="b010107"
                android:text="7"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:id="@+id/b010108"
                android:tag="b010108"
                android:text="8"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:id="@+id/b010109"
                android:tag="b010109"
                android:text="9"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:id="@+id/b010110"
                android:text="10"
                android:tag="b010110"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:id="@+id/b010111"
                android:text="11"
                android:tag="b010111"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:id="@+id/b010112"
                android:text="12"
                android:tag="b010112"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.OneAreaButton
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_margin="10sp"
                android:id="@+id/b010113"
                android:text="13"
                android:tag="b010113"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:gravity="center_vertical"
            android:layout_marginRight="10sp"
            android:layout_height="fill_parent">
        <ImageButton
            android:id="@+id/thirdAreaRig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:background="@drawable/arrow_right_24"
            />

        <Button
            android:id="@+id/thirdAreaReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/resetBtn"
            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:background="#7B68EE"
        android:gravity="center_vertical"
        android:id="@+id/thirdMeterLayout"
        >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5sp"
           android:textSize="20sp"
           android:text="@string/metrcInfo"/>

    </LinearLayout>





<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TableRow>
        <FrameLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragmentContinerid">
            <fragment
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/area2Fragment"
                android:name="com.company.administrator.monitorsystem.ThirdAreaFragment"/>
        </FrameLayout>

        <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subSubmitFragment"
            android:name="com.company.administrator.monitorsystem.SubmitAreaFragment"/>

    </TableRow>
</TableLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

       <Button
           android:layout_width="200sp"
           android:layout_height="90sp"
           android:textColor="#FFFFFF"
           android:textSize="30sp"
           android:onClick="kongpanModel"
           android:text="@string/kongpanBtn"/>
    </LinearLayout>
</LinearLayout>