<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:id="@+id/thirdRootid"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="fill_parent"
       android:gravity="center"
       android:layout_height="50sp">
       <Button
           android:layout_width="20sp"
           android:layout_height="20sp"
           android:layout_marginRight="30sp"
           android:background="@drawable/heartbeat_back"
           android:onClick="submit"
           android:id="@+id/heatbeatid"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/thirdAreaTitle"/>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/btn4Pop"
           android:layout_gravity="right"
           android:visibility="gone"
           />
   </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10sp"
            android:gravity="center_vertical"
            android:layout_height="fill_parent">
            <ImageButton
                android:id="@+id/thirdAreaLft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:clickable="true"
                android:background="@drawable/arrow_left_24"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3AreaSub"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:layout_height="fill_parent">
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030101"
                android:tag="b030101"
                android:text="1"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030102"
                android:tag="b030102"
                android:text="2"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030103"
                android:tag="b030103"
                android:text="3"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030104"
                android:tag="b030104"
                android:text="4"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030105"
                android:tag="b030105"
                android:text="5"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030106"
                android:tag="b030106"
                android:text="6"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030107"
                android:tag="b030107"
                android:text="7"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030108"
                android:tag="b030108"
                android:text="8"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030109"
                android:tag="b030109"
                android:text="9"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030110"
                android:tag="b030110"
                android:text="10"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030111"
                android:tag="b030111"
                android:text="11"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030112"
                android:tag="b030112"
                android:text="12"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030113"
                android:tag="b030113"
                android:text="13"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030114"
                android:tag="b030114"
                android:text="14"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030115"
                android:tag="b030115"
                android:text="15"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030116"
                android:tag="b030116"
                android:text="16"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
            <com.henry.view.SpecButton
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_margin="10sp"
                android:id="@+id/b030117"
                android:tag="b030117"
                android:text="17"
                android:visibility="gone"
                android:background="@drawable/cicle_button"/>
        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:gravity="center_vertical"
            android:layout_marginRight="10sp"
            android:layout_height="fill_parent">
        <ImageButton
            android:id="@+id/thirdAreaRig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:background="@drawable/arrow_right_24"
            />

        <Button
            android:id="@+id/thirdAreaReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/resetBtn"
            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:background="#7B68EE"
        android:gravity="center_vertical"
        android:id="@+id/thirdMeterLayout"
        >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5sp"
           android:textSize="20sp"
           android:text="@string/metrcInfo"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/third_meter_info_layout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondAreaTitle"/>

    </LinearLayout>


<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TableRow>
        <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/area2Fragment"
            android:name="com.company.administrator.monitorsystem.SecondAreaFragment"/>


        <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subSubmitFragment"
            android:name="com.company.administrator.monitorsystem.SubmitAreaFragment"/>

    </TableRow>
</TableLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

       <Button
           android:layout_width="200sp"
           android:layout_height="90sp"
           android:background="@color/bright_foreground_dark"
           android:textColor="#0B07E9"
           android:textSize="30sp"
           android:onClick="kongpanModel"
           android:text="@string/kongpanBtn"/>
    </LinearLayout>
</LinearLayout>